bindings/RosuFFI.h

typedef struct String String;
typedef struct OsuPerformanceAttributes OsuPerformanceAttributes;
typedef struct ManiaPerformanceAttributes ManiaPerformanceAttributes;
typedef struct PerformanceAttributes PerformanceAttributes;
typedef struct ManiaDifficultyAttributes ManiaDifficultyAttributes;
typedef struct CatchDifficultyAttributes CatchDifficultyAttributes;
typedef struct CatchPerformanceAttributes CatchPerformanceAttributes;
typedef struct Option_f64 Option_f64;
typedef struct DifficultyAttributes DifficultyAttributes;
typedef struct TaikoDifficultyAttributes TaikoDifficultyAttributes;
typedef struct TaikoPerformanceAttributes TaikoPerformanceAttributes;
typedef struct OsuDifficultyAttributes OsuDifficultyAttributes;
struct String { uint8_t *ptr; uintptr_t len; uintptr_t capacity; };
typedef enum TooSuspicious {
    TOOSUSPICIOUS_DENSITY = 0,
    TOOSUSPICIOUS_LENGTH = 1,
    TOOSUSPICIOUS_OBJECTCOUNT = 2,
    TOOSUSPICIOUS_REDFLAG = 3,
    TOOSUSPICIOUS_SLIDERPOSITIONS = 4,
    TOOSUSPICIOUS_SLIDERREPEATS = 5,
} TooSuspicious;
struct ManiaDifficultyAttributes {
    double stars;
    uint32_t n_objects;
    uint32_t n_hold_notes;
    uint32_t max_combo;
    bool is_convert;
};
typedef enum FFIError {
    FFIERROR_OK = 0,
    FFIERROR_NULL = 100,
    FFIERROR_PANIC = 200,
    FFIERROR_IOERROR = 300,
    FFIERROR_SERIALIZEERROR = 600,
    FFIERROR_CONVERTERROR = 700,
    FFIERROR_UNKNOWN = 1000,
} FFIError;
struct CatchDifficultyAttributes {
    double stars;
    double preempt;
    uint32_t n_fruits;
    uint32_t n_droplets;
    uint32_t n_tiny_droplets;
    bool is_convert;
};
struct CatchPerformanceAttributes {
    CatchDifficultyAttributes difficulty;
    double pp;
};
struct Option_f64 { uint32_t variant; double some; };
struct TaikoDifficultyAttributes {
    double stamina;
    double rhythm;
    double color;
    double reading;
    double great_hit_window;
    double ok_hit_window;
    double mono_stamina_factor;
    double mechanical_difficulty;
    double consistency_factor;
    double stars;
    uint32_t max_combo;
    bool is_convert;
};
typedef enum Mode {
    MODE_OSU = 0,
    MODE_TAIKO = 1,
    MODE_CATCH = 2,
    MODE_MANIA = 3,
} Mode;
struct TaikoPerformanceAttributes {
    TaikoDifficultyAttributes difficulty;
    double pp;
    double pp_acc;
    double pp_difficulty;
    Option_f64 estimated_unstable_rate;
};
struct OsuDifficultyAttributes {
    double aim;
    double aim_difficult_slider_count;
    double speed;
    double flashlight;
    double reading;
    double slider_factor;
    double aim_top_weighted_slider_factor;
    double speed_top_weighted_slider_factor;
    double speed_note_count;
    double aim_difficult_strain_count;
    double speed_difficult_strain_count;
    double reading_difficult_note_count;
    double nested_score_per_object;
    double legacy_score_base_multiplier;
    double maximum_legacy_combo_score;
    double ar;
    double great_hit_window;
    double ok_hit_window;
    double meh_hit_window;
    double hp;
    uint32_t n_circles;
    uint32_t n_sliders;
    uint32_t n_large_ticks;
    uint32_t n_spinners;
    double stars;
    uint32_t max_combo;
};
struct OsuPerformanceAttributes {
    OsuDifficultyAttributes difficulty;
    double pp;
    double pp_acc;
    double pp_aim;
    double pp_flashlight;
    double pp_reading;
    double pp_speed;
    double effective_miss_count;
    Option_f64 speed_deviation;
    double combo_based_estimated_miss_count;
    Option_f64 score_based_estimated_miss_count;
    double aim_estimated_slider_breaks;
    double speed_estimated_slider_breaks;
};
struct ManiaPerformanceAttributes {
    ManiaDifficultyAttributes difficulty;
    double pp;
    double pp_difficulty;
};
struct PerformanceAttributes {
    uint32_t variant;
    union {
        OsuPerformanceAttributes osu;
        TaikoPerformanceAttributes taiko;
        CatchPerformanceAttributes catch;
        ManiaPerformanceAttributes mania;
    } payload;
};
struct DifficultyAttributes {
    uint32_t variant;
    union {
        OsuDifficultyAttributes osu;
        TaikoDifficultyAttributes taiko;
        CatchDifficultyAttributes catch;
        ManiaDifficultyAttributes mania;
    } payload;
};
int64_t interoptopus_string_create(const void * utf8, uint64_t len, String * rval);
int64_t interoptopus_string_destroy(String utf8);