JavaRosuPP/src/main/java/desu/life/RosuFFI.java


    @Structure.FieldOrder({"variant", "payload"})
    public static class ServiceResult extends Structure {
        public int variant;
        public Payload payload;
        public static class Payload extends Union {
            public Pointer ok;
            public short error;
        }
        public static class ByValue extends ServiceResult implements Structure.ByValue {}
        @Override public void read() {
            super.read();
            payload.setType(variant == 0 ? Pointer.class : short.class);
            payload.read();
        }
        Pointer unwrap(String operation) {
            if (variant == 0 && payload.ok != null) return payload.ok;
            int code = variant == 1 ? Short.toUnsignedInt(payload.error)
                : variant == 2 ? FFIError.PANIC : FFIError.NULL;
            throw new FFIException(operation, code);
        }
    }

    @Structure.FieldOrder({"ptr", "len", "capacity"})
    public static class Utf8String extends Structure {
        public Pointer ptr;
        public long len;
        public long capacity;
        public static class ByValue extends Utf8String implements Structure.ByValue {}

        static ByValue fromJava(String value) {
            byte[] bytes = value.getBytes(StandardCharsets.UTF_8);
            Memory memory = bytes.length == 0 ? null : new Memory(bytes.length);
            if (memory != null) memory.write(0, bytes, 0, bytes.length);
            Utf8String out = new Utf8String();
            NATIVE.interoptopus_string_create(memory, bytes.length, out);
            out.read();
            ByValue result = new ByValue();
            result.ptr = out.ptr;
            result.len = out.len;
            result.capacity = out.capacity;
            result.write();
            return result;
        }

        String consume() {
            String value = len == 0 ? "" : new String(ptr.getByteArray(0, Math.toIntExact(len)), StandardCharsets.UTF_8);
            ByValue owned = new ByValue();
            owned.ptr = ptr;
            owned.len = len;
            owned.capacity = capacity;
            owned.write();
            NATIVE.interoptopus_string_destroy(owned);
            ptr = null;
            len = 0;
            capacity = 0;
            return value;
        }
    }

    @Structure.FieldOrder({"data", "len"})
    public static class SliceU8 extends Structure {
        public Pointer data;
        public long len;
        protected Memory owner;
        public static class ByValue extends SliceU8 implements Structure.ByValue {}
        static ByValue from(byte[] bytes) {
            ByValue value = new ByValue();
            value.owner = bytes.length == 0 ? null : new Memory(bytes.length);
            if (value.owner != null) value.owner.write(0, bytes, 0, bytes.length);
            value.data = value.owner;
            value.len = bytes.length;
            value.write();
            return value;
        }
    }

    @Structure.FieldOrder({"variant", "some"})
    public static class OptionDouble extends Structure {
        public int variant;
        public double some;
        public static class ByValue extends OptionDouble implements Structure.ByValue {}
        public OptionalDouble toOptional() {
            return variant == 0 ? OptionalDouble.of(some) : OptionalDouble.empty();
        }
    }

    @Structure.FieldOrder({"variant", "some"})
    public static class OptionUint extends Structure {
        public int variant;
        public int some;
        public static class ByValue extends OptionUint implements Structure.ByValue {}
        public OptionalInt toOptional() {
            return variant == 0 ? OptionalInt.of(some) : OptionalInt.empty();
        }
    }

    @Structure.FieldOrder({"variant", "some"})
    public static class OptionTooSuspicious extends Structure {
        public int variant;
        public byte some;
        public static class ByValue extends OptionTooSuspicious implements Structure.ByValue {}
        public Optional<TooSuspicious> toOptional() {
            return variant == 0 ? Optional.of(TooSuspicious.fromValue(some)) : Optional.empty();
        }
    }

    @Structure.FieldOrder({"aim", "aim_difficult_slider_count", "speed", "flashlight", "reading",
        "slider_factor", "aim_top_weighted_slider_factor", "speed_top_weighted_slider_factor",
        "speed_note_count", "aim_difficult_strain_count", "speed_difficult_strain_count",
        "reading_difficult_note_count", "nested_score_per_object", "legacy_score_base_multiplier",
        "maximum_legacy_combo_score", "ar", "great_hit_window", "ok_hit_window", "meh_hit_window",
        "hp", "n_circles", "n_sliders", "n_large_ticks", "n_spinners", "stars", "max_combo"})
    public static class OsuDifficultyAttributes extends Structure {
        public double aim, aim_difficult_slider_count, speed, flashlight, reading, slider_factor;
        public double aim_top_weighted_slider_factor, speed_top_weighted_slider_factor, speed_note_count;
        public double aim_difficult_strain_count, speed_difficult_strain_count, reading_difficult_note_count;
        public double nested_score_per_object, legacy_score_base_multiplier, maximum_legacy_combo_score;
        public double ar, great_hit_window, ok_hit_window, meh_hit_window, hp;
        public int n_circles, n_sliders, n_large_ticks, n_spinners;
        public double stars;
        public int max_combo;
    }

    @Structure.FieldOrder({"stamina", "rhythm", "color", "reading", "great_hit_window", "ok_hit_window",
        "mono_stamina_factor", "mechanical_difficulty", "consistency_factor", "stars", "max_combo", "is_convert"})
    public static class TaikoDifficultyAttributes extends Structure {
        public double stamina, rhythm, color, reading, great_hit_window, ok_hit_window;
        public double mono_stamina_factor, mechanical_difficulty, consistency_factor, stars;
        public int max_combo;
        public byte is_convert;
    }

    @Structure.FieldOrder({"stars", "preempt", "n_fruits", "n_droplets", "n_tiny_droplets", "is_convert"})
    public static class CatchDifficultyAttributes extends Structure {
        public double stars, preempt;
        public int n_fruits, n_droplets, n_tiny_droplets;
        public byte is_convert;
    }

    @Structure.FieldOrder({"stars", "n_objects", "n_hold_notes", "max_combo", "is_convert"})
    public static class ManiaDifficultyAttributes extends Structure {
        public double stars;
        public int n_objects, n_hold_notes, max_combo;
        public byte is_convert;
    }

    public static class DifficultyPayload extends Union {
        public OsuDifficultyAttributes osu;
        public TaikoDifficultyAttributes taiko;
        public CatchDifficultyAttributes catchValue;
        public ManiaDifficultyAttributes mania;
    }

    @Structure.FieldOrder({"variant", "payload"})
    public static class DifficultyAttributes extends Structure {
        public byte variant;
        public DifficultyPayload payload;
        public DifficultyAttributes() {}
        protected DifficultyAttributes(Pointer memory) { super(memory); }
        public static class ByValue extends DifficultyAttributes implements Structure.ByValue {
            public ByValue() {}
            private ByValue(Pointer memory) { super(memory); }
        }
        @Override public void read() {
            super.read();
            payload.setType(switch (variant) {
                case 0 -> OsuDifficultyAttributes.class;
                case 1 -> TaikoDifficultyAttributes.class;
                case 2 -> CatchDifficultyAttributes.class;
                case 3 -> ManiaDifficultyAttributes.class;
                default -> throw new IllegalStateException("Invalid difficulty variant " + variant);
            });
            payload.read();
        }
        public Mode mode() { return Mode.fromValue(variant); }
        public OsuDifficultyAttributes asOsu() { require(Mode.Osu); return payload.osu; }
        public TaikoDifficultyAttributes asTaiko() { require(Mode.Taiko); return payload.taiko; }
        public CatchDifficultyAttributes asCatch() { require(Mode.Catch); return payload.catchValue; }
        public ManiaDifficultyAttributes asMania() { require(Mode.Mania); return payload.mania; }
        private void require(Mode mode) {
            if (variant != mode.value) throw new IllegalStateException("Expected " + mode + ", got " + mode());
        }
    }

    @Structure.FieldOrder({"difficulty", "pp", "pp_acc", "pp_aim", "pp_flashlight", "pp_reading",
        "pp_speed", "effective_miss_count", "speed_deviation", "combo_based_estimated_miss_count",
        "score_based_estimated_miss_count", "aim_estimated_slider_breaks", "speed_estimated_slider_breaks"})
    public static class OsuPerformanceAttributes extends Structure {
        public OsuDifficultyAttributes difficulty;
        public double pp, pp_acc, pp_aim, pp_flashlight, pp_reading, pp_speed, effective_miss_count;
        public OptionDouble speed_deviation;
        public double combo_based_estimated_miss_count;
        public OptionDouble score_based_estimated_miss_count;
        public double aim_estimated_slider_breaks, speed_estimated_slider_breaks;
    }

    @Structure.FieldOrder({"difficulty", "pp", "pp_acc", "pp_difficulty", "estimated_unstable_rate"})
    public static class TaikoPerformanceAttributes extends Structure {
        public TaikoDifficultyAttributes difficulty;
        public double pp, pp_acc, pp_difficulty;
        public OptionDouble estimated_unstable_rate;
    }

    @Structure.FieldOrder({"difficulty", "pp"})
    public static class CatchPerformanceAttributes extends Structure {
        public CatchDifficultyAttributes difficulty;
        public double pp;
    }

    @Structure.FieldOrder({"difficulty", "pp", "pp_difficulty"})
    public static class ManiaPerformanceAttributes extends Structure {
        public ManiaDifficultyAttributes difficulty;
        public double pp, pp_difficulty;
    }

    public static class PerformancePayload extends Union {
        public OsuPerformanceAttributes osu;
        public TaikoPerformanceAttributes taiko;
        public CatchPerformanceAttributes catchValue;
        public ManiaPerformanceAttributes mania;
    }

    @Structure.FieldOrder({"variant", "payload"})
    public static class PerformanceAttributes extends Structure {
        public byte variant;
        public PerformancePayload payload;
        public static class ByValue extends PerformanceAttributes implements Structure.ByValue {}
        @Override public void read() {
            super.read();
            payload.setType(switch (variant) {
                case 0 -> OsuPerformanceAttributes.class;
                case 1 -> TaikoPerformanceAttributes.class;
                case 2 -> CatchPerformanceAttributes.class;
                case 3 -> ManiaPerformanceAttributes.class;
                default -> throw new IllegalStateException("Invalid performance variant " + variant);
            });
            payload.read();
        }
        public Mode mode() { return Mode.fromValue(variant); }
        public OsuPerformanceAttributes asOsu() { require(Mode.Osu); return payload.osu; }
        public TaikoPerformanceAttributes asTaiko() { require(Mode.Taiko); return payload.taiko; }
        public CatchPerformanceAttributes asCatch() { require(Mode.Catch); return payload.catchValue; }
        public ManiaPerformanceAttributes asMania() { require(Mode.Mania); return payload.mania; }
        private void require(Mode mode) {
            if (variant != mode.value) throw new IllegalStateException("Expected " + mode + ", got " + mode());
        }
    }
